--- a/app/index.html
+++ b/app/index.html
@@ -82,18 +82,8 @@
               </div>
               <div class="mainmenu pull-left">
                 <ul class="nav navbar-nav collapse navbar-collapse">
-                  <li><a ng-href="#/" id="home_link" class="">Inicio</a></li>
+                  <li><a ng-href="#/" id="init_link" class="active">Inicio</a></li>
                   <li><a ng-href="#/products" id="products_link" class="">Productos</a></li>
-                  <!--
-                  <li class="dropdown"><a ng-href="#">Tienda<i class="fa fa-angle-down"></i></a>
-                    <ul role="menu" class="sub-menu">
-                      <li><a ng-href="#/user">Mi usuario</a></li> 
-                      <li><a ng-href="#/category">Productos</a></li>
-                      <li><a ng-href="#/cart">Carrito</a></li> 
-                      <li><a ng-href="#/checkout">Caja</a></li> 
-                    </ul>
-                  </li> 
-                  -->
                   <li><a ng-href="#/contact" id="contact_link" class="">Contacto</a></li>
                 </ul>
               </div>
@@ -120,7 +110,7 @@
               <div class="single-widget">
                 <h2>PCMicro</h2>
                 <ul class="nav nav-pills nav-stacked">
-                  <li><a ng-href="#"><i class="fa fa-phone-square fa-lg"></i> (311) 218-0005</a></li>
+                  <li><a ng-href="tel:+523112180005"><i class="fa fa-phone-square fa-lg"></i> (311) 218-0005</a></li>
                   <li><a ng-href="mailto:jj_espinola@hotmail.com"><i class="fa fa-envelope-square fa-lg"></i> jj_espinola@hotmail.com</a></li>
                   <li><a target="_blank" ng-href="https://www.facebook.com/pc.micro"><i class="fa fa-facebook-square fa-lg"></i> pc.micro</a></li>
                 </ul>
@@ -175,7 +165,7 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-    <script src="scripts/vendor/moltin.min.js"></script>
+    <script src="https://js.moltin.com/v1"></script>
     <script src="scripts/vendor/price-range.js"></script>
     
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
