Added add to card

--- a/app/index.html
+++ b/app/index.html
@@ -90,7 +90,7 @@
             </div>
             <div class="col-sm-5">
               <div class="search_box pull-right">
-                <input type="text" placeholder="Buscar"/>
+                <input type="text" placeholder="Buscar" disabled/>
               </div>
             </div>
           </div>
